--- a/index.html
+++ b/index.html
@@ -357,9 +357,19 @@
                             </p>
                         </div>
                     </div>
-
-
-
+                    <div class="blog">
+                        <img src="img1/portfolio_page.png" alt="">
+                        <div class="blog-text">
+                            <h4>
+                                <a
+                                    href="https://rupesh88899.github.io/my_portfolio/">My
+                                    Portfolio</a>
+                            </h4>
+                            <p>
+                                A personal portfolio made with loads of patience and love. Using Frontend.
+                            </p>
+                        </div>
+                    </div>
                     <div class="blog">
                         <img src="img1/gym.png" alt="">
                         <div class="blog-text">
