--- a/index.html
+++ b/index.html
@@ -361,8 +361,7 @@
                         <img src="img1/portfolio_page.png" alt="">
                         <div class="blog-text">
                             <h4>
-                                <a
-                                    href="https://rupesh88899.github.io/my_portfolio/">My
+                                <a href="https://rupesh88899.github.io/my_portfolio/">My
                                     Portfolio</a>
                             </h4>
                             <p>
@@ -374,7 +373,7 @@
                         <img src="img1/gym.png" alt="">
                         <div class="blog-text">
                             <h4>
-                                <a href="https://dik-sha.github.io/cv_css/">Gym website </a>
+                                <a href="https://rupesh88899.github.io/gym-site/">Gym website </a>
                             </h4>
                             <p>
                                 A gym website to introduce and new gym and to get booking options
