--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     Exploring new Techs. I have a self-driven attitude to embrace new skills and competencies.
                 </p>
                 <div class="btn-con">
-                    <a href="https://github.com/rupesh88899/Resume" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1GvLJpb9R_9hJ1cStLGnkwHRY7lWkqHsa/view?usp=sharing" class="main-btn">
                         <span class="btn-text" href="">Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -63,7 +63,7 @@
                         improving my understanding about flutter development, web development , DSA and Competitive
                         Coding. <br /> <br />
                     <div class="btn-con">
-                        <a href="https://github.com/rupesh88899/Resume" class="main-btn">
+                        <a href="https://drive.google.com/file/d/1GvLJpb9R_9hJ1cStLGnkwHRY7lWkqHsa/view?usp=sharing" class="main-btn">
                             <span class="btn-text">Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
