--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <i class="fas fa-building"></i>
                     </div>
                     <p class="tl-duration">2021-2022</p>
-                    <h5>High School<span> - KENDRIYA VIDYALAYA BARGARH </span></h5>
+                    <h5>High School<span> - KENDRIYA VIDYALAYA BAIRAGARH </span></h5>
                     <p>
                         PCM + Percentage - 81%
                     </p>
@@ -174,7 +174,7 @@
                         <i class="fas fa-school"></i>
                     </div>
                     <p class="tl-duration">upto - 2020</p>
-                    <h5>Primary School<span> - KENDRIYA VIDYALAYA BARGARH</span></h5>
+                    <h5>Primary School<span> - KENDRIYA VIDYALAYA BAIRAGARH</span></h5>
                     <p>
                         10th Percentage - 73%
                     </p>
