--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="shortcut icon" href="/img1/fabicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +42,8 @@
                     Exploring new Techs. I have a self-driven attitude to embrace new skills and competencies.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1GvLJpb9R_9hJ1cStLGnkwHRY7lWkqHsa/view?usp=sharing" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1GvLJpb9R_9hJ1cStLGnkwHRY7lWkqHsa/view?usp=sharing"
+                        class="main-btn">
                         <span class="btn-text" href="">Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -58,12 +60,13 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        Hey There! I am Rupesh Kumar Tiwari, a undergrad student pursuing Bachelor of Technology in
+                        Hey There! I am Rupesh Kumar Tiwari, a undergraduate student pursuing Bachelor of Technology in
                         Computer Science Engineering from Jabalpur Engineering College,Jabalpur. I am currently
                         improving my understanding about flutter development, web development , DSA and Competitive
                         Coding. <br /> <br />
                     <div class="btn-con">
-                        <a href="https://drive.google.com/file/d/1GvLJpb9R_9hJ1cStLGnkwHRY7lWkqHsa/view?usp=sharing" class="main-btn">
+                        <a href="https://drive.google.com/file/d/1GvLJpb9R_9hJ1cStLGnkwHRY7lWkqHsa/view?usp=sharing"
+                            class="main-btn">
                             <span class="btn-text">Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -212,7 +215,7 @@
             </div>
             <div class="main-title">
                 <h2>
-                    <<span>Profile</span>/>
+                    <span>Profile</span>/>
                 </h2>
             </div>
             <!-- <p class="port-text">
@@ -292,7 +295,7 @@
                                 <a href="https://github.com/rupesh88899/recipe">Recipe Finder</a>
                             </h4>
                             <p>
-                                A Recipe finder fluter app to make delicious food at home
+                                A Recipe finder flutter app to make delicious food at home
                             </p>
                         </div>
                     </div>
