new projects added

--- a/index.html
+++ b/index.html
@@ -275,8 +275,31 @@
                 <div class="main-title">
                     <h2><span>APP</span><span class="bg-text">projects</span></h2>
                 </div>
-
                 <div class="blogs">
+                    <div class="blog">
+                        <img src="img1/postify.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>
+                                <a href="https://github.com/rupesh88899/Postify">Postify App</a>
+                            </h4>
+                            <p>
+                                Postify with firebase, cloudinary, google authenticaton, posting and commenting like
+                                features...
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="img1/notes.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>
+                                <a href="https://github.com/rupesh88899/notes_f">Notes App</a>
+                            </h4>
+                            <p>
+                                Notes app made with flutter and using Firebase for data storage and email
+                                authenticaton...
+                            </p>
+                        </div>
+                    </div>
                     <div class="blog">
                         <img src="img1/music.jpg" alt="">
                         <div class="blog-text">
@@ -284,7 +307,8 @@
                                 <a href="https://github.com/rupesh88899/Music">Music Player</a>
                             </h4>
                             <p>
-                                A Music Player app made with Flutter in which we can play songs from our local storage
+                                A Music Player app made with Flutter in which we can play songs from our local
+                                storage...
                             </p>
                         </div>
                     </div>
@@ -295,7 +319,7 @@
                                 <a href="https://github.com/rupesh88899/recipe">Recipe Finder</a>
                             </h4>
                             <p>
-                                A Recipe finder flutter app to make delicious food at home
+                                A Recipe finder flutter app to make delicious food at home...
                             </p>
                         </div>
                     </div>
@@ -306,7 +330,8 @@
                                 <a href="https://github.com/rupesh88899/Weather-App">Weather App</a>
                             </h4>
                             <p>
-                                A Weather app made with Flutter to know the current weather and weather forcast of any
+                                A Weather app made with Flutter to know the current weather and weather forcast of
+                                any...
                                 place.
                             </p>
                         </div>
@@ -318,7 +343,7 @@
                                 <a href="https://github.com/rupesh88899/shoes-app">Shoes Shopping app </a>
                             </h4>
                             <p>
-                                A shoes shopping app made with Flutter to buy branded shoes.
+                                A shoes shopping app made with Flutter to buy branded shoes...
                             </p>
                         </div>
                     </div>
@@ -329,7 +354,7 @@
                                 <a href="https://github.com/rupesh88899/Currency_cnverter_app">Currency Converter </a>
                             </h4>
                             <p>
-                                A basic currency converter app to convert Dollar to Rupees instantly.
+                                A basic currency converter app to convert Dollar to Rupees instantly...
                             </p>
                         </div>
                     </div>
@@ -356,7 +381,7 @@
                             </h4>
                             <p>
                                 A food ordering webiste to order delicious food
-                                using Html and CSS.
+                                using Html and CSS...
                             </p>
                         </div>
                     </div>
@@ -368,7 +393,7 @@
                                     Portfolio</a>
                             </h4>
                             <p>
-                                A personal portfolio made with loads of patience and love. Using Frontend.
+                                A personal portfolio made with loads of patience and love. Using Frontend...
                             </p>
                         </div>
                     </div>
@@ -380,7 +405,7 @@
                             </h4>
                             <p>
                                 A gym website to introduce and new gym and to get booking options
-                                using Html and CSS.
+                                using Html and CSS...
                             </p>
                         </div>
                     </div>
